--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -12,3 +12,5 @@ jobs:
     steps:
       - name: "print Hello world"
         run:  echo "Hello World" 
+      - name: "Print Date"
+        run : date
