--- a/multieventpipeline.yml
+++ b/multieventpipeline.yml
@@ -1,32 +1,26 @@
-name: "Multi Event Pipeline / workflow"  #name of pipeline
+name: "Multi Event Pipeline / workflow"  # Name of pipeline
 
 on:
-  push: # Event: whenever a push is made to the repository on the master / test branch
+  push:  # Event: whenever a push is made to the repository on the main/test branch
     branches:
-        - main
-        - test
+      - main
+      - test
 
-  pull_request: #Event : whenever a pull request is made to the repository
-          branches:
-              - main
+  pull_request:  # Event: whenever a pull request is made to the repository
+    branches:
+      - main
 
 jobs:
-    on-push: #job name
-      if: github.event_name ='push'
-      runs-on: ubuntu-latest
-      steps: # Steps to be executed in the job
-         - name: "Running on master / test push" # step 1
-           run : echo "Running on master/ test push"
+  on-push:  # Job name
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:  # Steps to be executed in the job
+      - name: "Running on master / test push"  # Step 1
+        run: echo "Running on master/ test push"
 
-  on-pull-request: #job name
-       if: github.event_name = 'pull_request'
-       runs-on: ubuntu-latest
-       steps: #steps to be executed in the job
-         - name: " Running on pull request" # step 1
-           run: echo" Running on pull request"  
-
-
-
-
-
-
+  on-pull-request:  # Job name
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:  # Steps to be executed in the job
+      - name: "Running on pull request"  # Step 1
+        run: echo "Running on pull request"
