--- a/.github/workflows/multi_Event_pipeline.yml
+++ b/.github/workflows/multi_Event_pipeline.yml
@@ -12,11 +12,13 @@ on:
 
 jobs:
     on-push:
+        if: github.event == 'push'
         runs-on: ubuntu-latest
         steps:
            - name: "Running on main branch"
              run: echo "Running on main push"
     on-pull-request:
+        if: github.event == 'pull_request'
         runs-on: ubuntu-latest
         steps: 
             - name: "Running on pull request"
